# rules_ada

./: 404.html  MODULE.bazel  README.md  WORKSPACE.bazel  ada_binary.html  ada_info.html  ada_library.html  ada_shared_library.html  ada_static_library.html  ada_test.html  ada_toolchain.html  index.html  print.html  rules.html  searchindex.js  searchindex.json  toc.html  toc.js  version.bzl
.bcr/: source.template.json
.github/: release_notes.template
.github/workflows/: bcr-publish.yaml  ci.yaml  release.yaml
ada/: BUILD.bazel  ada_binary.bzl  ada_info.bzl  ada_library.bzl  ada_shared_library.bzl  ada_static_library.bzl  ada_test.bzl  ada_toolchain.bzl  defs.bzl  extensions.bzl  unit_naming.bzl
ada/private/: BUILD.bazel  ada.bzl  common.bzl  providers.bzl  toolchain.bzl  toolchain_repo.bzl  unit_naming.bzl  versions.bzl
ada/private/coverage/: BUILD.bazel  Cargo.toml  main.rs
ada/private/process_wrapper/: BUILD.bazel  main.rs
ada/runfiles/: BUILD.bazel  README.md  runfiles.adb  runfiles.ads
ada/settings/: BUILD.bazel  settings.bzl
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  index.md  rules.md
examples/simple/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  main.adb  math.adb  math.ads  math_test.adb
tests/ada_calls_c/: BUILD.bazel  c_math.c  c_math.h  main.adb
tests/chained_deps/: BUILD.bazel  calculator.adb  calculator.ads  main.adb  main.expected  math_utils.adb  math_utils.ads
tests/determinism/: BUILD.bazel  determinism_test_suite.bzl
tests/determinism/srcs/: foo.adb
tests/exports_bodies/: BUILD.bazel  exports_bodies_test_suite.bzl
tests/incrementality/: BUILD.bazel  incrementality_test_suite.bzl
tests/incrementality/srcs/: bar.ads
tests/interop_cc/: BUILD.bazel  ada_math.adb  ada_math.ads  c_wrapper.c  main.adb
tests/interop_rust/: BUILD.bazel  main.adb  rusty_math.rs
tests/library_binding/: BUILD.bazel  library_binding_test_suite.bzl
tests/library_binding/srcs/: foo.adb
tests/runfiles/: BUILD.bazel  sample.txt  test_runfiles.adb
tests/shared_library/: BUILD.bazel  main.adb  math_ops.adb  math_ops.ads
tests/simple_binary/: BUILD.bazel  hello.adb  hello.expected
tests/simple_test/: BUILD.bazel  test_assertions.adb
tests/split_compilation/: BUILD.bazel  split_compilation_test_suite.bzl
tests/split_compilation/srcs/: parent-child.adb  parent.adb  parent.ads  parent_oddly_named.adb  types.ads
tests/unit_naming/: BUILD.bazel  unit_naming_test_suite.bzl
tools/update_versions/: BUILD.bazel  update_versions.py
