load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = [
        "//ada:__pkg__",
        "//tests:__subpackages__",
    ],
    deps = [
        "@apple_support//lib:apple_support",
        "@bazel_skylib//lib:paths",
        "@rules_cc//cc/common",
    ],
)
