load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//ada:defs.bzl", "ada_binary")

cc_library(
    name = "c_math",
    srcs = ["c_math.c"],
    hdrs = ["c_math.h"],
)

ada_binary(
    name = "main",
    srcs = ["main.adb"],
    deps = [":c_math"],
)

run_binary(
    name = "main_output",
    outs = ["main.output"],
    args = ["$(execpath main.output)"],
    tool = ":main",
)

diff_test(
    name = "main_test",
    file1 = "main.expected",
    file2 = "main.output",
)
