load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")
load("//ada:defs.bzl", "ada_binary", "ada_shared_library")

ada_shared_library(
    name = "math_ops",
    srcs = [
        "math_ops.adb",
        "math_ops.ads",
    ],
)

ada_binary(
    name = "main",
    srcs = ["main.adb"],
    linkstatic = False,
    deps = [":math_ops"],
)

run_binary(
    name = "main_output",
    outs = ["main.output"],
    args = ["$(location main.output)"],
    tool = ":main",
)

diff_test(
    name = "main_test",
    file1 = "main.expected",
    file2 = "main.output",
)
