load("@rules_rust//rust:rust_binary.bzl", "rust_binary")
load("@rules_rust//rust:rust_test.bzl", "rust_test")

rust_binary(
    name = "process_wrapper",
    srcs = ["main.rs"],
    edition = "2021",
    visibility = ["//visibility:public"],
)

rust_test(
    name = "process_wrapper_test",
    crate = ":process_wrapper",
)
